--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- We Show You log set as Favicon for browser-->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -12,7 +13,7 @@
     />
     
     
-    <title>We Show You - 5 Minute Demonstrations</title>
+    <title>We Show You | 5 Minute Demonstrations</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
